# qdrant-warp

./: .env  Cargo.toml  a  todo  z
.github/workflows/: shuttle.yml
src/: lib.rs  main.rs  util.rs
src/app/: mod.rs
src/constants/: mod.rs
src/qdrant/: mod.rs
src/routes/: add.rs  chat.rs  chat_from.rs  chats.rs  chats_from.rs  mod.rs  next_id.rs  scroll_chats.rs
