[package]
name = "qdrant-warp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
derive_more = { version = "1.0.0", features = ["display"] }
env_logger = "0.11.5"
log = "0.4.22"
once_cell = "1.20.2"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.210"
serde_json = "1.0.128"
shuttle-runtime = "0.48.0"
shuttle-warp = "0.48.0"
thiserror = "1.0.64"
tokio = "1.26.0"
uuid = { version = "1.10.0", features = ["v7"] }
warp = "0.3.3"
